search by route name rather than author, impl navigation
